Added API tests

--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,9 @@ ext {
     springVersion = '6.2.2'
     assertjVersion = '3.27.3'
     slf4j2Version = '2.24.3'
-
+    restAssuredVersion = '5.5.0'
+    jacksonVersion = '2.18.2'
+    lombockVersion = '1.18.36'
 }
 
 dependencies {
@@ -29,6 +31,11 @@ dependencies {
     implementation "org.springframework:spring-test:$springVersion"
     implementation "org.assertj:assertj-core:$assertjVersion"
     implementation "org.apache.logging.log4j:log4j-slf4j2-impl:$slf4j2Version"
+    implementation "io.rest-assured:rest-assured:$restAssuredVersion"
+    implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
+
+    compileOnly "org.projectlombok:lombok:1.18.36"
+    annotationProcessor "org.projectlombok:lombok:$lombockVersion"
 }
 
 configurations {
