--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -14,21 +14,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Download and Set Up Java 23 (Oracle)
-      - name: Set up Oracle JDK 23
-        run: |
-          wget -q --no-check-certificate -O jdk.tar.gz https://download.oracle.com/java/23/latest/jdk-23_linux-x64_bin.tar.gz
-          mkdir -p /opt/jdk
-          tar -xzf jdk.tar.gz -C /opt/jdk
-          ls -l /opt/jdk
-          echo "JAVA_HOME=/opt/jdk/jdk-23" >> $GITHUB_ENV
-          echo "/opt/jdk/jdk-23/bin" >> $GITHUB_PATH
-
-      # Step 3: Verify Java Installation
-      - name: Verify Java
-        run: |
-          echo "JAVA_HOME=$JAVA_HOME"
-          java -version
+      # Step 2: Set up Java 17
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin' # Use Eclipse Temurin (OpenJDK)
+          java-version: '17'
 
       # Step 3: Cache Gradle dependencies
       - name: Cache Gradle dependencies
