--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -14,12 +14,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Set up Java 17
-      - name: Set up JDK 17
+      # Step 2: Set up Java 21
+      - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin' # Use Eclipse Temurin (OpenJDK)
-          java-version: '17'
+          distribution: 'temurin' # Eclipse Temurin (OpenJDK)
+          java-version: '21'
 
       # Step 3: Cache Gradle dependencies
       - name: Cache Gradle dependencies
