--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,4 +1,4 @@
-name: Run tests
+name: Run UI Tests
 
 on:
   push:
@@ -14,14 +14,27 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Set up Java 21
+      # Step 2: Set up JDK 21
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin' # Eclipse Temurin (OpenJDK)
+          distribution: 'temurin'
           java-version: '21'
 
-      # Step 3: Cache Gradle dependencies
+      # Step 3: Install Chrome
+      - name: Install Chrome
+        run: sudo apt-get install -y google-chrome-stable
+
+      # Step 4: Install Chromedriver
+      - name: Install Chromedriver
+        run: |
+          CHROME_VERSION=$(google-chrome --version | grep -oP "\d+\.\d+\.\d+")
+          wget https://chromedriver.storage.googleapis.com/${CHROME_VERSION}/chromedriver_linux64.zip
+          unzip chromedriver_linux64.zip
+          sudo mv chromedriver /usr/local/bin/
+          sudo chmod +x /usr/local/bin/chromedriver
+
+      # Step 5: Cache Gradle dependencies
       - name: Cache Gradle dependencies
         uses: actions/cache@v3
         with:
@@ -30,6 +43,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      # Step 4: Run Desktop + US Tests with Spring Profile
+      # Step 6: Run UI Tests
       - name: Run UI Tests
-        run: ./gradlew clean remote -Dcountry=us -Ddevice=desktop -Dspring.profiles.active=desktop,us -Dsuite=regression -Dthreads=2
+        run: ./gradlew clean remote -Dcountry=us -Ddevice=desktop -Dspring.profiles.active=desktop,us -Dsuite=regression -Dthreads=2 -DSelenide.headless=ture
