--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,15 @@ tasks.register("remote") {
     description = 'Runs the Cucumber tests remotely'
     System.setProperty('selenide.browser', "chrome")
     System.setProperty('selenide.headless', "true")
+
+    System.properties.stringPropertyNames()
+            .findAll { it.startsWith("selenide.") }
+            .forEach {
+                println " set ${it} to ${System.getProperty(it)}"
+                systemProperties[it] = System.getProperty(it)
+            }
+    jvmArgs = ['-ea', '-Xmx512m']
+
     doFirst {
         if (!shouldRunTests()) {
             throw new GradleException("Tests are not configured to run for the current settings.")
